# smartContract

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
artifacts/macos/极易合同智能脱敏.app/Contents/: Info.plist
public/: llm-desensitize.config.json
scripts/: build-name-dictionary.mjs  build-ocr-worker.mjs  build-ocr-worker.sh  build-surname-table.mjs  setup-ocr-worker.mjs  setup-ocr-worker.sh  tauri-wrapper.mjs  test-surname-ner.mjs  write-llm-config.mjs
src/: main.js
src-tauri/: Cargo.toml  llm-desensitize.config.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/ocr-worker/: rapidocr_worker.py  requirements.txt
src-tauri/src/: main.rs
src/components/: DocFormatPreview.vue  PdfComparePreview.vue  PdfManualMaskEditor.vue  SectionHeader.vue  TextManualMaskEditor.vue
src/data/: chineseSurnames.js  nameDictionary.js
src/layouts/: AppLayout.vue
src/pages/: HistoryPage.vue  HomePage.vue  LoginPage.vue  ProfilePage.vue  WordLibraryPage.vue
src/router/: index.js
src/store/: auth.js  history.js
src/styles/: global.css
src/utils/: desensitize.js  exports.js  file.js  llmDesensitize.js  manualMask.js  ner.js  ocr.js  pdf.js  storage.js  surnameNer.js  wecom.js
test-data/contracts/: sample1.docx  sample2.docx  sample3.docx
